# Skin

./: CMakeLists.txt  README.md
data/: curves1.step  demo.igs
include/: skin.h  viewer.h  window.h
src/: main.cpp  skin.cpp  viewer.cpp  window.cpp
utils/: utils.cpp  utils.h
